--- a/src/main/webapp/resources/css/page.css
+++ b/src/main/webapp/resources/css/page.css
@@ -1,28 +1,38 @@
 table#page {
-	border-left-style:			solid;
-	border-top-style:			solid;
-	border-width:				1px;
+    background-color:       #9ED5F9;
+	border-width:			1px;
 	height:					100%;
 	width:					100%;
+}
+
+tr#page_header{
+    height:         20px;
+
 }
 
 td#page_body{
     border-width:	1px;
     vertical-align:	top;
     width:			20%;
+    height:        100%;
 }
+
 td#page_body_menu {
-	border-width:				1px;
+	background-color:       #9ED5F9;
+	border-width:			1px;
 	vertical-align:			top;
 	width:					20%;
 }
 
 td#page_body_content {
-	border-bottom-style:		solid;
-	border-left-style:			solid;
-	border-top-style:			solid;
-	border-width:				1px;
-	padding-left:				1em;
-	padding-top:				0.5em;
+    background-color:       #C9E3F5;
+	border-width:			1px;
+	padding-left:			1em;
+	padding-top:			0.5em;
 	vertical-align:			top;
+}
+
+tr#page_footer{
+    height:         20px;
+
 }
